microservice jar package & dynamic loading